# socket.io-chat-with-native

./: .gitignore  CMakeLists.txt  readme.md
client/: CMakeLists.txt  client.cpp
client/lib/: libPocoCppUnit.so.1  libPocoDataMySQL.so.60  libPocoRedis.so.60
server/: index.js  package.json
